Update for limited disclosure 9-1-2025

--- a/_cases/2024/DIVD-2024-00035.md
+++ b/_cases/2024/DIVD-2024-00035.md
@@ -1,8 +1,8 @@
 ---
 layout: case
 # Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well
-title: "18 vulnerabilities in ioCharger devices"
-excerpt: "Researchers have discovered 17 critical vulnerabilities in the IoCharger Home, 9 of these vulnerabilities also affect  the IoCharger Pedestal EV charging devices. Owners are advised to ensure that these devices cannot be reached from untrusted networks."
+title: "18 vulnerabilities in Iocharger devices"
+excerpt: "Researchers have discovered 17 critical vulnerabilities in the Iocharger Home, 9 of these vulnerabilities also affect  the Iocharger Pedestal EV charging devices. Owners are advised to ensure that these devices cannot be reached from untrusted networks."
 author: 
 - Frank Breedijk
 lead: Frank Breedijk
@@ -18,23 +18,20 @@ cves:
 - CVE-2024-43651
 - CVE-2024-43652
 - CVE-2024-43653
-- CVE-2024-43654
 - CVE-2024-43655
 - CVE-2024-43656
 - CVE-2024-43657
-- CVE-2024-43658
-- CVE-2024-43659
 - CVE-2024-43660
 - CVE-2024-43661
 - CVE-2024-43662
 - CVE-2024-43663
-- CVE-2024-43664
 product: 
-- IoCharger Home
-- IoCharger Pedestal
+- Iocharger Home
+- Iocharger Pedestal
+- All other Iocharger AC models, including those sold als white label solutions under a different brand name
 versions: 
-- Any firmware version below 20241118-190348
-recommendation: Do not expose your IoCharger equipment to untrusted networks (e.g. the internet or a visitor network). If internet connectivity is needed, place the device behind a NAT gateway and block all incoming traffic.
+- Firmware below version 24120701
+recommendation: Do not expose your Iocharger equipment to untrusted networks (e.g. the internet or a visitor network). If internet connectivity is needed, place the device behind a NAT gateway and block all incoming traffic.
 patch_status: Vendor reports that patches have been developed, and are abvilable but has not disclosed details.
 -workaround: n/a
 status : Open
@@ -62,11 +59,17 @@ timeline:
 - start: 2024-09-27
   end:  
   event: "Vendor reports that patch has been developed more time to test is needed."
-- start: 2024-12-19
+- start: 2024-12-07
+  end:  
+  event: "Firmware 24120701 created to address security findings."
+- start: 2024-12-18
+  end:  
+  event: "Binary analysis of firmware 24120701 done. 4 vulnerabilities unfixed. Reported to vendor."
+- start: 2025-01-09
   end:   
   event: "Limited disclosure"
 - start: 2024-08-15
-  end:   2024-12-19
+  end:   2025-01-09
   event: "Time to limited disclosure"
 #- start: 2024-12-09
 #  end:  
@@ -89,62 +92,58 @@ jekyll-secinfo:
 ---
 ## Summary
 
-Security researcher Wilco van Beijnum assisted by DIVD researcher Harm van den Brink has found 18 severe vulnerabilities in two IoCharger products. 
+Security researcher Wilco van Beijnum assisted by DIVD researcher Harm van den Brink has found 17 severe vulnerabilities in Iocharger AC products. 
 
-He found 18 vulnerabilities in the IoCharger Home ranging from CVSS9.9 to CVSS3.1. THese vulnerabilities are:
+Iocharger has fix the following 13 vulnerabilities:
 - {% cve CVE-2024-43648 %} - Authenticated remote command execution vulnerability #1 - CVSSv4 9.3
 - {% cve CVE-2024-43649 %} - Authenticated remote command execution vulnerability #2 - CVSSv4 9.3
 - {% cve CVE-2024-43650 %} - Authenticated remote command execution vulnerability #3 - CVSSv4 9.3
 - {% cve CVE-2024-43651 %} - Authenticated remote command execution vulnerability #4 - CVSSv4 9.3
 - {% cve CVE-2024-43652 %} - Authenticated remote command execution vulnerability #5 - CVSSv4 9.3
 - {% cve CVE-2024-43653 %} - Authenticated remote command execution vulnerability #6 - CVSSv4 9.3
-- {% cve CVE-2024-43654 %} - Authenticated remote command execution vulnerability #7 - CVSSv4 9.3
 - {% cve CVE-2024-43655 %} - Authenticated remote command execution vulnerability #8 - CVSSv4 9.3
 - {% cve CVE-2024-43656 %} - Authenticated arbitrary file upload vulnerability #1 - CVSSv4 9.3
 - {% cve CVE-2024-43657 %} - Authenticated remote command execution vulnerability #9 - CVSSv4 9.3
-- {% cve CVE-2024-43658 %} - Authenticated arbitrary deletion of files vulnerability #1 - CVSSv4 7.2
-- {% cve CVE-2024-43659 %} - Insufficiently protected plain text default credentials #1 - CVSSv4 8.4
 - {% cve CVE-2024-43660 %} - Authenticated arbitrary file download vulnerability #1 - CVSSv4 7.1
 - {% cve CVE-2024-43661 %} - Authenticated buffer overflow leading to DoS vulnerability #1 - CVSSv4 7.1
 - {% cve CVE-2024-43662 %} - Authenticated arbitrary file upload vulnerability #2 - CVSSv4 5.3
 - {% cve CVE-2024-43663 %} - Various authenticated buffer overflow vulnerabilities - CVSSv4 5.3
-- {% cve CVE-2024-43664 %} - Exposure of login service via the chargning cable (HLC) - CVSSv4 1.0
 
-Alltough all attacks are authenticated, an attacker that is in posession of a device or firmware image is able to extract all information needed to execute these attacks on other devices. Successfull exploitation give an attacker the ability to take full control over any device it can gain acces to, either remotely via the internet, by being on the same (visitor) network as the charger or via the charging cable.
+Alltough all attacks are authenticated, an attacker that is in posession of a device or firmware image is able to extract all information needed to execute these attacks on other devices. Successfull exploitation will give an attacker the ability to take full control over any device it can gain acces to, either remotely via the internet, by being on the same (visitor) network as the charger or via the charging cable.
 
-The vendor reports that firmware version 20241118-190348 fixes these vulnerabilities, we have not been able to verify this because we no longer have access to the hardware.
+The vendor reports that firmware version 241207 fixes these 13 vulnerabilities. The other 4 vulnerabilities are currently being fixed by the vendor.
 
 ## What you can do
 
-The vulnerabilities have been fix in firmware version 20241118-190348 which is applicable to both puducts (and potentially other IoCharger pruducts as well).  The best cause of action is to update the firmware of your device. We have not received clear information from the vendor as to whow you can update your device.
+The vulnerabilities have been fix in firmware version 24120701 which is applicable to all AC Chargers manufactured by Iocharger. Iocharger does have a website where the firmware can be downloaded or release notes or security bulletinscan be viewed. Instead Iocharger has made their distributor(s) aware that a firware update that fixes security findings exists. If as a owner you have not been contacted by your distributor/vendor we advice you to reach out to them for updated firmware. If you cannot get support fromyou vendor/distributor you can contact Iocharger directly on sales@iocharger.com to get updated firmware.
 
-Additionally we recommend that you do not expose your IoCharger device to an untrusted network. 
+Because Iocharger uses a weak default password that can relatively easily be extracted from the firmware, walso advice you change this password immediately.
+
+Additionally we recommend that you to make sure that any Iocharger device is not reachable from either the internet or any other untrusted network (e.g. a visitor network).
 
 ## What we are doing
 
-DIVD has responsibly disclosed the vulnerability to ioCharge, whoi have released patches for these vulnerabilities. Now that these vulnerabilities have been published, we are scanning the internet to identify these devices and warn owners or network administrators that these devices are vulnerable and need to be updated.
+DIVD has responsibly disclosed 17 vulnerabilities to ioCharger, who have fixed 14 of these vulnerabilities and are still working on fixing the other 4 vulnerabilities. Updated firmware is made avialable to their distributors. Now that these vulnerabilities have been published, we are scanning the internet to identify these devices and warn owners or network administrators that these devices are vulnerable and need to be updated via their suppliers.
+
+We will continue to work with Iocharger to get the remaining vulnerabilities fixed.
 
 {% comment %}  Leave this here, so we see a timeline{% endcomment %}
 {% include timeline.html %}
 
 ## More information
-* [IoCharger website](https://iocharger.com/)
+* [Iocharger website](https://iocharger.com/)
 * [Product Website](https://iocharge.com/ac-charging-solutions/)
-* [Blog post: Wilco van Beijnum and Harm van den Brink found 17 vulnerabilities in ioCharger EV chargers](/2024/12/18/Zero-day-vulnerabilities-ioCharger/)
+* [Blog post: Wilco van Beijnum and Harm van den Brink found 17 vulnerabilities in Iocharger EV chargers](/2025/01/09/Zero-day-vulnerabilities-ioCharger/)
 * {% cve CVE-2024-43648 %}
 * {% cve CVE-2024-43649 %}
 * {% cve CVE-2024-43650 %}
 * {% cve CVE-2024-43651 %}
 * {% cve CVE-2024-43652 %}
 * {% cve CVE-2024-43653 %}
-* {% cve CVE-2024-43654 %}
 * {% cve CVE-2024-43655 %}
 * {% cve CVE-2024-43656 %}
 * {% cve CVE-2024-43657 %}
-* {% cve CVE-2024-43658 %}
-* {% cve CVE-2024-43659 %}
 * {% cve CVE-2024-43660 %}
 * {% cve CVE-2024-43661 %}
 * {% cve CVE-2024-43662 %}
 * {% cve CVE-2024-43663 %}
-* {% cve CVE-2024-43664 %}
