Mind the spelling of Iocharger

--- a/_cases/2024/DIVD-2024-00035.md
+++ b/_cases/2024/DIVD-2024-00035.md
@@ -32,7 +32,7 @@ product:
 versions: 
 - Firmware below version 24120701
 recommendation: Do not expose your Iocharger equipment to untrusted networks (e.g. the internet or a visitor network). If internet connectivity is needed, place the device behind a NAT gateway and block all incoming traffic.
-patch_status: Vendor reports that patches have been developed, and are abvilable but has not disclosed details.
+patch_status: Firmware 24120701 fixes 16 vulnerabilities, and is available via distributors of Iocharger
 -workaround: n/a
 status : Open
 status : Open
@@ -132,7 +132,7 @@ We will continue to work with Iocharger to get the remaining vulnerabilities fix
 
 ## More information
 * [Iocharger website](https://iocharger.com/)
-* [Product Website](https://iocharge.com/ac-charging-solutions/)
+* [Product Website](https://www.iocharger.com/products/)
 * [Blog post: Wilco van Beijnum and Harm van den Brink found 17 vulnerabilities in Iocharger EV chargers](/2025/01/09/Zero-day-vulnerabilities-ioCharger/)
 * {% cve CVE-2024-43648 %}
 * {% cve CVE-2024-43649 %}
