--- a/_cases/2024/DIVD-2024-00046.md
+++ b/_cases/2024/DIVD-2024-00046.md
@@ -17,8 +17,9 @@ versions:
 recommendation: "Upgrade the Ivanti CSA 4.6 to CSA 5.0"
 workaround: "none"
 patch_status: Patch available
-status : Open
+status: Closed
 start: 2024-09-24
+end: 2025-01-06
 timeline:
 - start: 2024-09-24
   end:
@@ -35,6 +36,13 @@ timeline:
 - start: 2024-11-20
   end:
   event: "Mails sent out."
+- start: 2025-01-06
+  end:
+  event: "DIVD sent out a second round of notifications."
+- start: 2025-01-06
+  end:
+  event: "Case closed."
+ips: 193
 ---
 
 ## Summary
