--- a/_cases/2024/DIVD-2024-00047.md
+++ b/_cases/2024/DIVD-2024-00047.md
@@ -19,8 +19,9 @@ versions:
 recommendation: "Patch your version to a non-vulnerable version"
 workaround: "none"
 patch_status: Patch available
-status: Open
+status: Closed
 start: 2024-11-11
+end: 2025-01-06
 timeline:
 - start: 2024-11-11
   end:
@@ -33,7 +34,14 @@ timeline:
   event: "Case opened and starting first scan."
 - start: 2024-11-21
   end:
-  event: "DIVD begins notifying owners of vulnerable systems." 
+  event: "DIVD begins notifying owners of vulnerable systems."
+- start: 2025-01-06
+  end:
+  event: "DIVD sent out a second round of notifications."
+- start: 2025-01-06
+  end:
+  event: "Case closed."
+ips: 2527
 ---
 
 ## Summary
