--- a/_cases/2024/DIVD-2024-00035.md
+++ b/_cases/2024/DIVD-2024-00035.md
@@ -32,7 +32,7 @@ product:
 versions: 
 - Firmware below version 24120701
 recommendation: Do not expose your Iocharger equipment to untrusted networks (e.g. the internet or a visitor network). If internet connectivity is needed, place the device behind a NAT gateway and block all incoming traffic.
-patch_status: Firmware 24120701 fixes 16 vulnerabilities, and is available via distributors of Iocharger
+patch_status: Firmware 24120701 fixes 13 vulnerabilities, and is available via distributors of Iocharger
 -workaround: n/a
 status : Open
 status : Open
@@ -94,7 +94,7 @@ jekyll-secinfo:
 
 Security researcher Wilco van Beijnum assisted by DIVD researcher Harm van den Brink has found 17 severe vulnerabilities in Iocharger AC products. 
 
-Iocharger has fix the following 13 vulnerabilities:
+Iocharger has fixed the following 13 vulnerabilities:
 - {% cve CVE-2024-43648 %} - Authenticated remote command execution vulnerability #1 - CVSSv4 9.3
 - {% cve CVE-2024-43649 %} - Authenticated remote command execution vulnerability #2 - CVSSv4 9.3
 - {% cve CVE-2024-43650 %} - Authenticated remote command execution vulnerability #3 - CVSSv4 9.3
@@ -115,15 +115,15 @@ The vendor reports that firmware version 241207 fixes these 13 vulnerabilities. 
 
 ## What you can do
 
-The vulnerabilities have been fix in firmware version 24120701 which is applicable to all AC Chargers manufactured by Iocharger. Iocharger does have a website where the firmware can be downloaded or release notes or security bulletinscan be viewed. Instead Iocharger has made their distributor(s) aware that a firware update that fixes security findings exists. If as a owner you have not been contacted by your distributor/vendor we advice you to reach out to them for updated firmware. If you cannot get support fromyou vendor/distributor you can contact Iocharger directly on sales@iocharger.com to get updated firmware.
+The vulnerabilities have been fixed in firmware version 24120701 which is applicable to all AC Chargers manufactured by Iocharger. Iocharger does not have a website where the firmware can be downloaded or release notes or security bulletins can be viewed. Instead Iocharger has made their distributor(s) aware that a firmware update that fixes security findings exists. If as a owner you have not been contacted by your distributor/vendor we advice you to reach out to them for updated firmware. If you cannot get support from your vendor/distributor you can contact Iocharger directly on sales@iocharger.com to get updated firmware.
 
-Because Iocharger uses a weak default password that can relatively easily be extracted from the firmware, walso advice you change this password immediately.
+Because Iocharger uses a weak default password that can relatively easily be extracted from the firmware, we also advice you change this password immediately.
 
 Additionally we recommend that you to make sure that any Iocharger device is not reachable from either the internet or any other untrusted network (e.g. a visitor network).
 
 ## What we are doing
 
-DIVD has responsibly disclosed 17 vulnerabilities to ioCharger, who have fixed 14 of these vulnerabilities and are still working on fixing the other 4 vulnerabilities. Updated firmware is made avialable to their distributors. Now that these vulnerabilities have been published, we are scanning the internet to identify these devices and warn owners or network administrators that these devices are vulnerable and need to be updated via their suppliers.
+DIVD has responsibly disclosed 17 vulnerabilities to Iocharger, who have fixed 14 of these vulnerabilities and are still working on fixing the other 4 vulnerabilities. Updated firmware is made available to their distributors. Now that these vulnerabilities have been published, we are scanning the internet to identify these devices and warn owners or network administrators that these devices are vulnerable and need to be updated via their suppliers.
 
 We will continue to work with Iocharger to get the remaining vulnerabilities fixed.
 
