Fix grammar and spelling in case

--- a/_cases/2024/DIVD-2024-00035.md
+++ b/_cases/2024/DIVD-2024-00035.md
@@ -28,7 +28,7 @@ cves:
 product: 
 - Iocharger Home
 - Iocharger Pedestal
-- All other Iocharger AC models, including those sold als white label solutions under a different brand name
+- All other Iocharger AC models, including those sold as white label solutions under a different brand name
 versions: 
 - Firmware below version 24120701
 recommendation: Do not expose your Iocharger equipment to untrusted networks (e.g. the internet or a visitor network). If internet connectivity is needed, place the device behind a NAT gateway and block all incoming traffic.
@@ -52,7 +52,7 @@ timeline:
 - start: 2024-08-15
   end:   open
   event: "Time to patch"
-  # Time to patch is antoher important metric
+  # Time to patch is another important metric
 - start: 2024-09-02
   end:  
   event: "Vendor reports that the issue was found before fix is planned for the near future.'"
@@ -76,7 +76,7 @@ timeline:
 #  event: "DIVD is scanning the internet to identify vulnerable systems"
 - start: 2025-06-01
   end:  
-  event: "Aproximate date for full disclosure"
+  event: "Approximate date for full disclosure"
 - start: 2024-08-15
   end:   open
   event: "Time to full disclosure"
@@ -109,13 +109,13 @@ Iocharger has fixed the following 13 vulnerabilities:
 - {% cve CVE-2024-43662 %} - Authenticated arbitrary file upload vulnerability #2 - CVSSv4 5.3
 - {% cve CVE-2024-43663 %} - Various authenticated buffer overflow vulnerabilities - CVSSv4 5.3
 
-Alltough all attacks are authenticated, an attacker that is in posession of a device or firmware image is able to extract all information needed to execute these attacks on other devices. Successfull exploitation will give an attacker the ability to take full control over any device it can gain acces to, either remotely via the internet, by being on the same (visitor) network as the charger or via the charging cable.
+Although all attacks are authenticated, an attacker that is in possession of a device or firmware image is able to extract all information needed to execute these attacks on other devices. Successful exploitation will give an attacker the ability to take full control over any device it can gain access to, either remotely via the internet, by being on the same (visitor) network as the charger or via the charging cable.
 
 The vendor reports that firmware version 241207 fixes these 13 vulnerabilities. The other 4 vulnerabilities are currently being fixed by the vendor.
 
 ## What you can do
 
-The vulnerabilities have been fixed in firmware version 24120701 which is applicable to all AC Chargers manufactured by Iocharger. Iocharger does not have a website where the firmware can be downloaded or release notes or security bulletins can be viewed. Instead Iocharger has made their distributor(s) aware that a firmware update that fixes security findings exists. If as a owner you have not been contacted by your distributor/vendor we advice you to reach out to them for updated firmware. If you cannot get support from your vendor/distributor you can contact Iocharger directly on sales@iocharger.com to get updated firmware.
+The vulnerabilities have been fixed in firmware version 24120701 which is applicable to all AC Chargers manufactured by Iocharger. Iocharger does not have a website where the firmware can be downloaded or release notes or security bulletins can be viewed. Instead Iocharger has made their distributor(s) aware that a firmware update that fixes security findings exists. If as an owner you have not been contacted by your distributor/vendor we advice you to reach out to them for updated firmware. If you cannot get support from your vendor/distributor you can contact Iocharger directly on sales@iocharger.com to get updated firmware.
 
 Because Iocharger uses a weak default password that can relatively easily be extracted from the firmware, we also advice you change this password immediately.
 
