Fixes based on review of Wilco

--- a/_cases/2024/DIVD-2024-00035.md
+++ b/_cases/2024/DIVD-2024-00035.md
@@ -2,7 +2,7 @@
 layout: case
 # Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well
 title: "17 vulnerabilities in Iocharger devices"
-excerpt: "Researchers have discovered 17 critical vulnerabilities in the Iocharger firmware for AC model changers. 13 vulnerabilities have been fixed, 4 have not yet been fixed.  Owners are advised to ensure that these devices cannot be reached from untrusted networks."
+excerpt: "Researchers have discovered 17 vulnerabilities in the Iocharger firmware for AC model changers, which alone or in combination can lead to full device compromise. 16 vulnerabilities have been fixed, 1 has not yet been fixed.  Owners are advised to ensure that these devices cannot be reached from untrusted networks."
 author: 
 - Frank Breedijk
 lead: Frank Breedijk
@@ -92,9 +92,9 @@ jekyll-secinfo:
 ---
 ## Summary
 
-Security researcher Wilco van Beijnum assisted by DIVD researcher Harm van den Brink has found 17 severe vulnerabilities in Iocharger AC products. 
+Security researcher Wilco van Beijnum assisted by DIVD researcher Harm van den Brink has found 17 vulnerabilities in Iocharger AC products., which alone or in combination can lead to a full device compromise.
 
-Iocharger has fixed the following 13 vulnerabilities:
+Iocharger has fixed the following 16 vulnerabilities:
 - {% cve CVE-2024-43648 %} - Authenticated remote command execution vulnerability #1 - CVSSv4 9.3
 - {% cve CVE-2024-43649 %} - Authenticated remote command execution vulnerability #2 - CVSSv4 9.3
 - {% cve CVE-2024-43650 %} - Authenticated remote command execution vulnerability #3 - CVSSv4 9.3
@@ -109,13 +109,13 @@ Iocharger has fixed the following 13 vulnerabilities:
 - {% cve CVE-2024-43662 %} - Authenticated arbitrary file upload vulnerability #2 - CVSSv4 5.3
 - {% cve CVE-2024-43663 %} - Various authenticated buffer overflow vulnerabilities - CVSSv4 5.3
 
-Although all attacks are authenticated, an attacker that is in possession of a device or firmware image is able to extract all information needed to execute these attacks on other devices. Successful exploitation will give an attacker the ability to take full control over any device it can gain access to, either remotely via the internet, by being on the same (visitor) network as the charger or via the charging cable.
+Although all attacks are authenticated, an attacker that is in possession of a device or firmware image is able to extract all information needed to execute these attacks on other devices. Successful exploitation will give an attacker the ability to take full control over any device it can gain access to, either remotely via the internet, by being on the same (visitor) network as the charger.
 
-The vendor reports that firmware version 241207 fixes these 13 vulnerabilities. The other 4 vulnerabilities are currently being fixed by the vendor.
+The vendor reports that firmware version 241207 fixes 13 of these vulnerabilities, and version XXXXXXX which fixes another 3. One vulnerability is currently still being fixed by the vendor.
 
 ## What you can do
 
-The vulnerabilities have been fixed in firmware version 24120701 which is applicable to all AC Chargers manufactured by Iocharger. Iocharger does not have a website where the firmware can be downloaded or release notes or security bulletins can be viewed. Instead Iocharger has made their distributor(s) aware that a firmware update that fixes security findings exists. If as an owner you have not been contacted by your distributor/vendor we advice you to reach out to them for updated firmware. If you cannot get support from your vendor/distributor you can contact Iocharger directly on sales@iocharger.com to get updated firmware.
+The vulnerabilities have been fixed in firmware version 24120701, and XXXXXX which are applicable to all AC Chargers manufactured by Iocharger. Iocharger does not have a website where firmware can be downloaded or where it publishes release notes or security bulletins. Instead Iocharger has made their distributor(s) aware that firmware updates are available that fix security findings, and has urged them to install it on customers' hardware. If as an owner you have not been contacted by your distributor/vendor we advice you to reach out to them for updated firmware. If you cannot get support from your vendor/distributor you can contact Iocharger directly on sales@iocharger.com to get updated firmware.
 
 Because Iocharger uses a weak default password that can relatively easily be extracted from the firmware, we also advice you change this password immediately.
 
@@ -123,7 +123,7 @@ Additionally we recommend that you to make sure that any Iocharger device is not
 
 ## What we are doing
 
-DIVD has responsibly disclosed 17 vulnerabilities to Iocharger, who have fixed 14 of these vulnerabilities and are still working on fixing the other 4 vulnerabilities. Updated firmware is made available to their distributors. Now that these vulnerabilities have been published, we are scanning the internet to identify these devices and warn owners or network administrators that these devices are vulnerable and need to be updated via their suppliers.
+DIVD has responsibly disclosed 17 vulnerabilities to Iocharger, who have fixed 16 of these vulnerabilities and are still working on fixing the last one. Updated firmware is made available to their distributors. Now that these vulnerabilities have been published, we are scanning the internet to identify these devices and warn owners or network administrators that these devices are vulnerable and need to be updated via their suppliers.
 
 We will continue to work with Iocharger to get the remaining vulnerabilities fixed.
 
