Polished CVE records with CVSS clarification for the NVD.

--- a/_cases/2024/DIVD-2024-00035.md
+++ b/_cases/2024/DIVD-2024-00035.md
@@ -2,7 +2,7 @@
 layout: case
 # Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well
 title: "17 vulnerabilities in Iocharger devices"
-excerpt: "Researchers have discovered 17 vulnerabilities in the Iocharger firmware for AC model changers, which alone or in combination can lead to full device compromise. 16 vulnerabilities have been fixed, 1 has not yet been fixed.  Owners are advised to ensure that these devices cannot be reached from untrusted networks."
+excerpt: "Researchers have discovered 17 vulnerabilities in the Iocharger firmware for AC model changers, which alone or in combination can lead to full device compromise. 16 vulnerabilities have been fixed, 1 has not yet been fixed.  Owners are advised to ensure that these devices cannot be reached from untrusted networks, and to change the password of the device if this has not been changed yet."
 author: 
 - Frank Breedijk
 lead: Frank Breedijk
@@ -30,9 +30,9 @@ product:
 - Iocharger Pedestal
 - All other Iocharger AC models, including those sold as white label solutions under a different brand name
 versions: 
-- Firmware below version 24120701
-recommendation: Do not expose your Iocharger equipment to untrusted networks (e.g. the internet or a visitor network). If internet connectivity is needed, place the device behind a NAT gateway and block all incoming traffic.
-patch_status: Firmware 24120701 fixes 13 vulnerabilities, and is available via distributors of Iocharger
+- Firmware below version 25010801
+recommendation: Do not expose your Iocharger equipment to untrusted networks (e.g. the internet or a visitor network). If internet connectivity is needed, place the device behind a NAT gateway and block all incoming traffic. Change the password of the device if this has not been changed yet.
+patch_status: Firmware version 24120701 fixes 13 vulnerabilities, version 25010801 fixes 3 more. Firmware is available via distributors of Iocharger proucts.
 -workaround: n/a
 status : Open
 status : Open
@@ -41,21 +41,29 @@ end:
 timeline:
 - start: 2024-08-13
   end:
-  event: "Vulnerability reported by Wilco van Beijnum and Harm van den Brink to CSIRT"
+  event: "Vulnerabilities reported by Wilco van Beijnum and Harm van den Brink to CSIRT"
 - start: 2024-08-15
   end:
-  event: "Vulnerability reported to and received by the vendor"
+  event: "Vulnerabilities reported to and received by the vendor"
 - start: 2024-08-15
   end:   2024-08-15  
   event: "Time to acknowledge"
   # Time to acknowledge is an important metric we like to track it# ips: 0 
 - start: 2024-08-15
+  end:   2024-12-07
+  event: "Time to patch 13 vulns"
+  # Time to patch is another important metric
+- start: 2024-08-15
+  end:   2025-01-08
+  event: "Time to patch 3 vulns"
+  # Time to patch is another important metric
+- start: 2024-08-15
   end:   open
-  event: "Time to patch"
+  event: "Time to patch last vulnerability"
   # Time to patch is another important metric
 - start: 2024-09-02
   end:  
-  event: "Vendor reports that the issue was found before fix is planned for the near future.'"
+  event: "Vendor reports that the issues were found before, fix is planned for the near future.'"
 - start: 2024-09-27
   end:  
   event: "Vendor reports that patch has been developed more time to test is needed."
@@ -65,12 +73,18 @@ timeline:
 - start: 2024-12-18
   end:  
   event: "Binary analysis of firmware 24120701 done. 4 vulnerabilities unfixed. Reported to vendor."
+- start: 2025-01-08
+  end:  
+  event: "Firmware 25010801 release fixing 3 findings."
+- start: 2025-01-08
+  end:  
+  event: "Binary analysis of firmware 25010801 done. All 3 vulnerabilities fixed. One vulnerability remaining"
 - start: 2025-01-09
   end:   
-  event: "Limited disclosure"
+  event: "Limited disclosure of 16 vulnerabilities"
 - start: 2024-08-15
   end:   2025-01-09
-  event: "Time to limited disclosure"
+  event: "Time to limited disclosure 16 vulnerabilities"
 #- start: 2024-12-09
 #  end:  
 #  event: "DIVD is scanning the internet to identify vulnerable systems"
@@ -95,19 +109,22 @@ jekyll-secinfo:
 Security researcher Wilco van Beijnum assisted by DIVD researcher Harm van den Brink has found 17 vulnerabilities in Iocharger AC products., which alone or in combination can lead to a full device compromise.
 
 Iocharger has fixed the following 16 vulnerabilities:
-- {% cve CVE-2024-43648 %} - Authenticated remote command execution vulnerability #1 - CVSSv4 9.3
-- {% cve CVE-2024-43649 %} - Authenticated remote command execution vulnerability #2 - CVSSv4 9.3
-- {% cve CVE-2024-43650 %} - Authenticated remote command execution vulnerability #3 - CVSSv4 9.3
-- {% cve CVE-2024-43651 %} - Authenticated remote command execution vulnerability #4 - CVSSv4 9.3
-- {% cve CVE-2024-43652 %} - Authenticated remote command execution vulnerability #5 - CVSSv4 9.3
-- {% cve CVE-2024-43653 %} - Authenticated remote command execution vulnerability #6 - CVSSv4 9.3
-- {% cve CVE-2024-43655 %} - Authenticated remote command execution vulnerability #8 - CVSSv4 9.3
-- {% cve CVE-2024-43656 %} - Authenticated arbitrary file upload vulnerability #1 - CVSSv4 9.3
-- {% cve CVE-2024-43657 %} - Authenticated remote command execution vulnerability #9 - CVSSv4 9.3
-- {% cve CVE-2024-43660 %} - Authenticated arbitrary file download vulnerability #1 - CVSSv4 7.1
-- {% cve CVE-2024-43661 %} - Authenticated buffer overflow leading to DoS vulnerability #1 - CVSSv4 7.1
-- {% cve CVE-2024-43662 %} - Authenticated arbitrary file upload vulnerability #2 - CVSSv4 5.3
-- {% cve CVE-2024-43663 %} - Various authenticated buffer overflow vulnerabilities - CVSSv4 5.3
+- {% cve CVE-2024-43648 %} - Authenticated command injection via \<redacted>.exe \<redacted> parameter - CVSSv4 9.3
+- {% cve CVE-2024-43649 %} - Authenticated command injection via \<redacted>.exe \<redacted> parameter - CVSSv4 9.3
+- {% cve CVE-2024-43650 %} - Authenticated command injection in the \<redacted> action leads to full remote code execution as root on the charging station - CVSSv4 9.3
+- {% cve CVE-2024-43651 %} - Authenticated command injection in the \<redacted> action leads to full remote code execution as root on the charging station - CVSSv4 9.3
+- {% cve CVE-2024-43652 %} - Authenticated command injection in the \<redacted> action leads to full remote code execution as root on the charging station - CVSSv4 9.3
+- {% cve CVE-2024-43653 %} - Authenticated command injection in the \<redacted> action leads to full remote code execution as root on the charging station - CVSSv4 9.3
+- {% cve CVE-2024-43654 %} - Authenticated command injection in the \<redacted> action leads to full remote code execution as root on the charging station - CVSSv4 9.3
+- {% cve CVE-2024-43655 %} - Any authenticated users can execute OS commands as root using the \<redacted>.sh CGI script. - CVSSv4 9.3
+- {% cve CVE-2024-43656 %} - A backup can be manipulated and then restored to create arbitrary files inside the \<redacted> directory. A CGI script can be added to the web directory this way, allowing for full remote code execution. - CVSSv4 9.3
+- {% cve CVE-2024-43657 %} - When uploading new firmware, a shell script inside a firmware file is executed during its processing. This can be used to craft a custom firmware file with a custom script with arbitrary code, which will then be executed on the charging station. - CVSSv4 9.3
+- {% cve CVE-2024-43658 %} - Using the \<redacted> action or \<redacted>.sh script, arbitrary files and directories can be deleted using directory traversal. - CVSSv4 7.2
+- {% cve CVE-2024-43659 %} - Plaintext default credentials in firmware - CVSSv4 9.2
+- {% cve CVE-2024-43660 %} - Arbitrary file download using \<redacted>.sh - CVSSv4 7.1
+- {% cve CVE-2024-43661 %} - Buffer overflow in \<redacted>.so leads to DoS of OCPP service - CVSSv4 7.1
+- {% cve CVE-2024-43662 %} - Authenticated arbitrary file upload to /tmp/ and /tmp/upload/ - CVSSv4 5.3
+- {% cve CVE-2024-43663 %} - Buffer overflow vulnerabilities in CGI scripts lead to segfault - CVSSv4 5.3
 
 Although all attacks are authenticated, an attacker that is in possession of a device or firmware image is able to extract all information needed to execute these attacks on other devices. Successful exploitation will give an attacker the ability to take full control over any device it can gain access to, either remotely via the internet, by being on the same (visitor) network as the charger.
 
