Fix list of CVEs

--- a/_cases/2024/DIVD-2024-00035.md
+++ b/_cases/2024/DIVD-2024-00035.md
@@ -18,9 +18,12 @@ cves:
 - CVE-2024-43651
 - CVE-2024-43652
 - CVE-2024-43653
+- CVE-2024-43654
 - CVE-2024-43655
 - CVE-2024-43656
 - CVE-2024-43657
+- CVE-2024-43658
+- CVE-2024-43659
 - CVE-2024-43660
 - CVE-2024-43661
 - CVE-2024-43662
@@ -120,7 +123,7 @@ Iocharger has fixed the following 16 vulnerabilities:
 - {% cve CVE-2024-43656 %} - A backup can be manipulated and then restored to create arbitrary files inside the \<redacted> directory. A CGI script can be added to the web directory this way, allowing for full remote code execution. - CVSSv4 9.3
 - {% cve CVE-2024-43657 %} - When uploading new firmware, a shell script inside a firmware file is executed during its processing. This can be used to craft a custom firmware file with a custom script with arbitrary code, which will then be executed on the charging station. - CVSSv4 9.3
 - {% cve CVE-2024-43658 %} - Using the \<redacted> action or \<redacted>.sh script, arbitrary files and directories can be deleted using directory traversal. - CVSSv4 7.2
-- {% cve CVE-2024-43659 %} - Plaintext default credentials in firmware - CVSSv4 9.2
+- {% cve CVE-2024-43659 %} - Plaintext default credentials in firmware - CVSSv4 8.3
 - {% cve CVE-2024-43660 %} - Arbitrary file download using \<redacted>.sh - CVSSv4 7.1
 - {% cve CVE-2024-43661 %} - Buffer overflow in \<redacted>.so leads to DoS of OCPP service - CVSSv4 7.1
 - {% cve CVE-2024-43662 %} - Authenticated arbitrary file upload to /tmp/ and /tmp/upload/ - CVSSv4 5.3
