--- a/_cases/2024/DIVD-2024-00035.md
+++ b/_cases/2024/DIVD-2024-00035.md
@@ -131,7 +131,7 @@ Iocharger has fixed the following 16 vulnerabilities:
 
 Although all attacks are authenticated, an attacker that is in possession of a device or firmware image is able to extract all information needed to execute these attacks on other devices. Successful exploitation will give an attacker the ability to take full control over any device it can gain access to, either remotely via the internet, by being on the same (visitor) network as the charger.
 
-The vendor reports that firmware version 241207 fixes 13 of these vulnerabilities, and version XXXXXXX which fixes another 3. One vulnerability is currently still being fixed by the vendor.
+The vendor reports that firmware version 24120701 fixes 13 of these vulnerabilities, and version 25010801 which fixes another 3. One vulnerability is currently still being fixed by the vendor.
 
 ## What you can do
 
