--- a/_cases/2024/DIVD-2024-00035.md
+++ b/_cases/2024/DIVD-2024-00035.md
@@ -135,7 +135,7 @@ The vendor reports that firmware version 24120701 fixes 13 of these vulnerabilit
 
 ## What you can do
 
-The vulnerabilities have been fixed in firmware version 24120701, and XXXXXX which are applicable to all AC Chargers manufactured by Iocharger. Iocharger does not have a website where firmware can be downloaded or where it publishes release notes or security bulletins. Instead Iocharger has made their distributor(s) aware that firmware updates are available that fix security findings, and has urged them to install it on customers' hardware. If as an owner you have not been contacted by your distributor/vendor we advice you to reach out to them for updated firmware. If you cannot get support from your vendor/distributor you can contact Iocharger directly on sales@iocharger.com to get updated firmware.
+The vulnerabilities have been fixed in firmware version 24120701, and 25010801 which are applicable to all AC Chargers manufactured by Iocharger. Iocharger does not have a website where firmware can be downloaded or where it publishes release notes or security bulletins. Instead Iocharger has made their distributor(s) aware that firmware updates are available that fix security findings, and has urged them to install it on customers' hardware. If as an owner you have not been contacted by your distributor/vendor we advice you to reach out to them for updated firmware. If you cannot get support from your vendor/distributor you can contact Iocharger directly on sales@iocharger.com to get updated firmware.
 
 Because Iocharger uses a weak default password that can relatively easily be extracted from the firmware, we also advice you change this password immediately.
 
