--- a/_cases/2024/DIVD-2024-00035.md
+++ b/_cases/2024/DIVD-2024-00035.md
@@ -109,7 +109,7 @@ jekyll-secinfo:
 ---
 ## Summary
 
-Security researcher Wilco van Beijnum assisted by DIVD researcher Harm van den Brink has found 17 vulnerabilities in Iocharger AC products., which alone or in combination can lead to a full device compromise.
+Security researcher Wilco van Beijnum assisted by DIVD researcher Harm van den Brink has found 17 vulnerabilities in Iocharger AC products, which alone or in combination can lead to a full device compromise.
 
 Iocharger has fixed the following 16 vulnerabilities:
 - {% cve CVE-2024-43648 %} - Authenticated command injection via \<redacted>.exe \<redacted> parameter - CVSSv4 9.3
