--- a/_cases/2024/DIVD-2024-00035.md
+++ b/_cases/2024/DIVD-2024-00035.md
@@ -34,7 +34,7 @@ product:
 - All other Iocharger AC models, including those sold as white label solutions under a different brand name
 versions: 
 - Firmware below version 25010801
-recommendation: Do not expose your Iocharger equipment to untrusted networks (e.g. the internet or a visitor network). If internet connectivity is needed, place the device behind a NAT gateway and block all incoming traffic. Change the password of the device if this has not been changed yet.
+recommendation: Do not expose your Iocharger equipment to untrusted networks (e.g. the internet or a visitor network). If internet connectivity is needed, place the device behind a NAT gateway and block all incoming traffic. Change the passwords of the device if these have not been changed yet.
 patch_status: Firmware version 24120701 fixes 13 vulnerabilities, version 25010801 fixes 3 more. Firmware is available via distributors of Iocharger proucts.
 -workaround: n/a
 status : Open
