--- a/_cases/2024/DIVD-2024-00035.md
+++ b/_cases/2024/DIVD-2024-00035.md
@@ -8,7 +8,7 @@ author:
 lead: Frank Breedijk
 researchers:
 - Wilco van Beijnum (independent researcher)
-- Harm van der Brink 
+- Harm van den Brink 
 - Frank Breedijk
 # You can use free text here as well. E.g. to indicate that some vulnerabilities don't have CVEs assigned (yet). But, given that we discovered that you should always be able to get a CVE id from @cna_admins on Slack
 cves:
