--- a/_cases/2025/DIVD-2025-00002.md
+++ b/_cases/2025/DIVD-2025-00002.md
@@ -3,7 +3,7 @@ layout: case
 title: "Authentication bypass in SonicWall SSL-VPN service"
 author: Alwin Warringa
 lead: Alwin Warringa
-excerpt: "SonicWall has identified an Improper Authentication vulnerability in the SSLVPN authentication mechanism that allows a remote attacker to bypass authentication, posing a serious threat to network integrity"
+excerpt: "SonicWall has identified an Improper Authentication vulnerability in the SSLVPN authentication mechanism that allows a remote attacker to bypass authentication, posing a serious threat by allowing attackers access to private networks"
 researchers:
 - Alwin Warringa
 - Thijs Alkemade (Computest)
