--- a/_cases/2025/DIVD-2025-00002.md
+++ b/_cases/2025/DIVD-2025-00002.md
@@ -36,7 +36,7 @@ timeline:
 ---
 
 ## Summary
-SonicWall has identified an Improper Authentication vulnerability in the SSLVPN authentication mechanism. A successful exploit of this vulnerability could allow an attacker to gain unauthorized access, with potential impacts to the confidentiality, integrity, and availability of the system.
+SonicWall has identified an Improper Authentication vulnerability in the SSLVPN authentication mechanism. A successful exploit of this vulnerability could allow an attacker to gain unauthorized access, with potential impacts to the confidentiality, integrity, and availability of the networks that were supposed to be protected by the VPN.
 
 ## Recommendations
 
