--- a/_cases/2025/DIVD-2025-00002.md
+++ b/_cases/2025/DIVD-2025-00002.md
@@ -40,7 +40,7 @@ SonicWall has identified an Improper Authentication vulnerability in the SSLVPN 
 
 ## Recommendations
 
-To remediate {% cve CVE-2024-53704 %}, apply the patch as soon as possible for impacted products, latest patch builds are available for download on mysonicwall.com
+To remediate {% cve CVE-2024-53704 %}, apply the patch as soon as possible for impacted products, latest patch builds are available for download on [mysonicwall.com](https://mysonicwall.com).
 
 ## What we are doing
 
