--- a/_cases/2025/DIVD-2025-00002.md
+++ b/_cases/2025/DIVD-2025-00002.md
@@ -16,7 +16,7 @@ versions:
 - 7.1.2-7019 for Gen7 firewalls
 - 8.0.0-8035 for TZ80 firewalls
 recommendation: "Apply the patch as soon as possible for impacted products"
-workaround: "none"
+workaround: "To mitigate the risk posed by these vulnerabilities, users should ensure that access to the SSL-VPN firewalls is limited to trusted sources, or to disable SSL-VPN access from the internet entirely"
 patch_status: Patch available
 status : Open
 start: 2025-01-09
