--- a/_cases/2024/DIVD-2024-00035.md
+++ b/_cases/2024/DIVD-2024-00035.md
@@ -10,6 +10,7 @@ researchers:
 - Wilco van Beijnum (independent researcher)
 - Harm van den Brink 
 - Frank Breedijk
+- Koen Schagen
 # You can use free text here as well. E.g. to indicate that some vulnerabilities don't have CVEs assigned (yet). But, given that we discovered that you should always be able to get a CVE id from @cna_admins on Slack
 cves:
 - CVE-2024-43648
