Timeline update for 00048

--- a/_cases/2024/DIVD-2024-00048.md
+++ b/_cases/2024/DIVD-2024-00048.md
@@ -34,6 +34,9 @@ timeline:
 - start: 2024-11-27
   end:
   event: "DIVD starts notifying owners of potentially vulnerable instances."
+- start: 2025-01-15
+  end:
+  event: "DIVD conducts a second scan and notification round."
 #ips:
 ---
 
